# PhotoMesh

./: .gitignore  LICENSE  README.md  colmap_converter.ipynb  pyproject.toml  test_colmap_cameras.ipynb  test_pm.ipynb  view_color_transfer.ipynb
notebooks/: test_colmap_cameras.ipynb  test_pm.ipynb  view_color_transfer.ipynb  view_matches.ipynb
photomesh/: __init__.py  color_match.py  core.py  inpaint.py  mesh_io.py  rasterizer.py  result.py  utils.py
photomesh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
photomesh/camera/: __init__.py  colmap.py
photomesh/uv/: __init__.py  base.py  xatlas_param.py
photomesh/view_selection/: __init__.py  base.py  closest_z.py
